fix(mobile_layout): fixes links-wrapping.

--- a/bb-frontend/src/components/footer-cabinet/footer-cabinet.module.css
+++ b/bb-frontend/src/components/footer-cabinet/footer-cabinet.module.css
@@ -70,6 +70,11 @@
     align-self: center;
 }
 
+.linkWrapper {
+    display: flex;
+    gap: 1rem;
+}
+
 
 @media only screen and (max-width: 844px) {
     .footerContainer {
